# bird

./: .rustfmt.toml  Cargo.toml  LISCENCE  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/core/: cli.rs  config.rs  egg.rs  eggs.rs  mod.rs  nest.rs  shell.rs
src/core/commands/: chirp.rs  command.rs  install.rs  list.rs  mod.rs  show.rs  uninstall.rs  update.rs
src/utils/: colour.rs  error.rs  errors.rs  files.rs  mod.rs  serializers.rs
