[package]
name = "bird"
version = "0.2.1"
edition = "2021"
description = "An installation organizer of sorts"

[dependencies]
ansi_term = "0.12.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
clap = { version = "3.1.18", features = ["derive", "env"] }
dialoguer = "0.10.1"
log = "0.4.17"
fern = "0.6.1"
chrono = { version = "0.4.19", features = ["serde"] }
