[package]
name = "bird"
version = "0.8.1"
edition = "2021"
description = "An installation organizer of sorts"

[dependencies]
ansi_term = "0.12.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
format_serde_error = "0.3.0"
clap = { version = "3.2.11", features = ["derive", "env"] }
dialoguer = "0.10.1"
log = "0.4.17"
fern = "0.6.1"
chrono = { version = "0.4.19", features = ["serde"] }
dirs = "4.0.0"
